# api/swagger/v1.yaml
@@ -73,52 +73,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/AccessTokenResponse'
-        default:
-          description: Error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-    put:
-      tags:
-        - User
-      description: Update a non-login User to a login User
-      operationId: updateUser
-      parameters:
-        - name: body
-          in: body
-          description: user
-          required: true
-          schema:
             $ref: '#/definitions/User'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/AccessTokenResponse'
-        default:
-          description: Error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-
-  /token:
-    x-swagger-router-controller: users
-    post:
-      tags:
-        - User
-      description: Return access token
-      operationId: createToken
-      parameters:
-        - name: body
-          in: body
-          description: user
-          required: true
-          schema:
-            $ref: '#/definitions/User'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/AccessTokenResponse'
         default:
           description: Error
           schema:
@@ -190,29 +145,17 @@ definitions:
     properties:
       uuid:
         type: string
-      email:
-        type: string
-        format: email
-      password:
-        type: string
-        format: password
-      created_at:
-        type: string
-        format: date-time
-      updated_at:
-        type: string
-        format: date-time
 
   Answer:
     required:
       - question_id
-      - user_id
+      - user_uuid
       - a
       - created_at
     properties:
       question_id:
         type: integer
-      user_id:
+      user_uuid:
         type: integer
       a:
         type: string
@@ -237,15 +180,6 @@ definitions:
     properties:
       question:
         $ref: '#/definitions/Question'
-  AccessTokenResponse:
-    required:
-      - user
-      - access_token
-    properties:
-      user:
-        $ref: '#/definitions/User'
-      access_token:
-        type: string
   AnswersResponse:
     required:
       - answers
@@ -264,9 +198,6 @@ definitions:
   ErrorResponse:
     required:
       - message
-      - code
     properties:
       message:
         type: string
-      code:
-        type: integer
